[gd_scene load_steps=3 format=3 uid="uid://sector_map"]

[ext_resource type="Script" path="res://scripts/ui/sector_map.gd" id="1_script"]
[ext_resource type="Script" path="res://scripts/ui/sector_map_renderer.gd" id="2_renderer"]

[node name="SectorMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.02, 0.05, 1)

[node name="MapRenderer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
script = ExtResource("2_renderer")

[node name="HUD" type="CanvasLayer" parent="."]
layer = 10

[node name="TopBar" type="HBoxContainer" parent="HUD"]
offset_left = 20.0
offset_top = 20.0
offset_right = 500.0
offset_bottom = 50.0
theme_override_constants/separation = 30

[node name="TurnLabel" type="Label" parent="HUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Turn: 1"

[node name="CreditsLabel" type="Label" parent="HUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Credits: 0"

[node name="SeedLabel" type="Label" parent="HUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
text = "Seed: XXXX-XXXX-XXXX"

[node name="BottomBar" type="HBoxContainer" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -70.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20

[node name="CrewButton" type="Button" parent="HUD/BottomBar"]
custom_minimum_size = Vector2(110, 40)
layout_mode = 2
text = "CREW"

[node name="UpgradeButton" type="Button" parent="HUD/BottomBar"]
custom_minimum_size = Vector2(110, 40)
layout_mode = 2
text = "UPGRADE"

[node name="MenuButton" type="Button" parent="HUD/BottomBar"]
custom_minimum_size = Vector2(110, 40)
layout_mode = 2
text = "MENU"

[node name="NodeInfoPanel" type="PanelContainer" parent="HUD"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 180.0
grow_horizontal = 0

[node name="VBox" type="VBoxContainer" parent="HUD/NodeInfoPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TypeLabel" type="Label" parent="HUD/NodeInfoPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Node Type"

[node name="DescLabel" type="Label" parent="HUD/NodeInfoPanel/VBox"]
layout_mode = 2
autowrap_mode = 2
text = "Description of the node goes here."

[node name="Spacer" type="Control" parent="HUD/NodeInfoPanel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="EnterButton" type="Button" parent="HUD/NodeInfoPanel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "ENTER"

[node name="CrewList" type="VBoxContainer" parent="HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = -80.0
grow_vertical = 0
theme_override_constants/separation = 5

[node name="CrewListLabel" type="Label" parent="HUD/CrewList"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "CREW STATUS"

[node name="TitleLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "SECTOR MAP"
horizontal_alignment = 1
